// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shows error on missed package.json 1`] = `
"[41m[30m ERROR [39m[49m [31mSize Limit did’t find [33mpackage.json[31m.[39m
[31m        Create npm package and run Size Limit there.[39m
"
`;

exports[`shows help 1`] = `
"[33msize-limit [OPTION]… [FILE]…[39m
Check the real performance cost of your front-end project to users

[1mCore options:[22m
  [33m--limit LIMIT[39m  Set size or running time limit for files
  [33m--json[39m         Show results in JSON format
  [33m--help[39m         Display this help
  [33m--version[39m      Display version

[1mExamples:[22m
  [33msize-limit[39m
    Read configuration from [1mpackage.json[22m or [1m.size-limit.json[22m and check limit
[33m  size-limit index.js[39m
    Show the size of specific files
"
`;

exports[`shows migration guide for npm users 1`] = `
"[31mInstall Size Limit preset depends on type of the project[39m

For application, where you send JS bundle directly to users
  [33mnpm install --save-dev @size-limit/preset-app[39m
For frameworks, components and big libraries
  [33mnpm install --save-dev @size-limit/preset-big-lib[39m
For small (< 10 KB) libraries
  [33mnpm install --save-dev @size-limit/preset-small-lib[39m
Check out docs for more comlicated cases
  [33mhttps://github.com/ai/size-limit/[39m
"
`;

exports[`shows migration guide for yarn users 1`] = `
"[31mInstall Size Limit preset depends on type of the project[39m

For application, where you send JS bundle directly to users
  [33myarn add --dev @size-limit/preset-app[39m
For frameworks, components and big libraries
  [33myarn add --dev @size-limit/preset-big-lib[39m
For small (< 10 KB) libraries
  [33myarn add --dev @size-limit/preset-small-lib[39m
Check out docs for more comlicated cases
  [33mhttps://github.com/ai/size-limit/[39m

You can remove size-limit dependency: [33myarn remove size-limit[39m
"
`;

exports[`shows webpack-related help 1`] = `
"[33msize-limit [OPTION]… [FILE]…[39m
Check the real performance cost of your front-end project to users

[1mCore options:[22m
  [33m--limit LIMIT[39m  Set size or running time limit for files
  [33m--json[39m         Show results in JSON format
  [33m--help[39m         Display this help
  [33m--version[39m      Display version

[1mWebpack options:[22m
  [33m--why[39m              Show package content
  [33m--save-bundle DIR[39m  Put build files to check them by hand

[1mExamples:[22m
  [33msize-limit[39m
    Read configuration from [1mpackage.json[22m or [1m.size-limit.json[22m and check limit
[33m  size-limit index.js[39m
    Show the size of specific files with all file dependencies
  [33msize-limit --why[39m
    Show reasons why project have this size
"
`;

exports[`throws on --save-bundle argument without webpack 1`] = `
"[41m[30m ERROR [39m[49m [31mArgument [33m--save-bundle[31m works only with [33m@size-limit/webpack[31m module[39m
"
`;

exports[`throws on --why argument without webpack 1`] = `
"[41m[30m ERROR [39m[49m [31mArgument [33m--why[31m works only with [33m@size-limit/webpack[31m module.[39m
[31m        You can add Bundle Analyzer to you own bundler.[39m
"
`;

exports[`throws on empty config 1`] = `
"[41m[30m ERROR [39m[49m [31mSize Limit config must [33mnot be empty[31m[39m

  [32m\\"size-limit\\"[39m: [
    {
      [32m\\"path\\"[39m: [33m\\"dist/bundle.js\\"[39m,
      [32m\\"limit\\"[39m: [33m\\"10 KB\\"[39m
    }
  ]
"
`;

exports[`throws on gzip option without gzip module 1`] = `
"[41m[30m ERROR [39m[49m [31mConfig option [33mgzip[31m needs [33m@size-limit/gzip[31m or [33m@size-limit/webpack[31m module[39m
"
`;

exports[`throws on no config 1`] = `
"[41m[30m ERROR [39m[49m [31mCreate Size Limit config in [33mpackage.json[31m[39m

  [32m\\"size-limit\\"[39m: [
    {
      [32m\\"path\\"[39m: [33m\\"dist/bundle.js\\"[39m,
      [32m\\"limit\\"[39m: [33m\\"10 KB\\"[39m
    }
  ]
"
`;

exports[`throws on non-array config 1`] = `
"[41m[30m ERROR [39m[49m [31mSize Limit config must contain [33man array[31m[39m

  [32m\\"size-limit\\"[39m: [
    {
      [32m\\"path\\"[39m: [33m\\"dist/bundle.js\\"[39m,
      [32m\\"limit\\"[39m: [33m\\"10 KB\\"[39m
    }
  ]
"
`;

exports[`throws on non-object check 1`] = `
"[41m[30m ERROR [39m[49m [31mSize Limit config array should contain [33monly objects[31m[39m

  [32m\\"size-limit\\"[39m: [
    {
      [32m\\"path\\"[39m: [33m\\"dist/bundle.js\\"[39m,
      [32m\\"limit\\"[39m: [33m\\"10 KB\\"[39m
    }
  ]
"
`;

exports[`throws on non-string entry 1`] = `
"[41m[30m ERROR [39m[49m [31mThe [33mentry[31m in Size Limit config must be [33ma string[31m or [33man array of strings[31m[39m
"
`;

exports[`throws on non-string path 1`] = `
"[41m[30m ERROR [39m[49m [31mThe [33mpath[31m in Size Limit config must be [33ma string[31m or [33man array of strings[31m[39m

  [32m\\"size-limit\\"[39m: [
    {
      [32m\\"path\\"[39m: [33m\\"dist/bundle.js\\"[39m,
      [32m\\"limit\\"[39m: [33m\\"10 KB\\"[39m
    }
  ]
"
`;

exports[`throws on running option without time module 1`] = `
"[41m[30m ERROR [39m[49m [31mConfig option [33mrunning[31m needs [33m@size-limit/time[31m module[39m
"
`;

exports[`throws on time limit without time module 1`] = `
"[41m[30m ERROR [39m[49m [31mAdd [33m@size-limit/time[31m module to use time limit[39m
"
`;

exports[`throws on unknown argument 1`] = `
"[41m[30m ERROR [39m[49m [31mUknown argument [33m--unknown[31m.[39m
[31m        Check command for typo and read docs.[39m
"
`;

exports[`throws on webpack option without webpack module 1`] = `
"[41m[30m ERROR [39m[49m [31mConfig option [33mwebpack[31m needs [33m@size-limit/webpack[31m module[39m
"
`;

exports[`throws on webpack option without webpack module 2`] = `
"[41m[30m ERROR [39m[49m [31mConfig option [33mignore[31m needs [33m@size-limit/webpack[31m module[39m
"
`;

exports[`throws on webpack option without webpack module 3`] = `
"[41m[30m ERROR [39m[49m [31mConfig option [33mconfig[31m needs [33m@size-limit/webpack[31m module[39m
"
`;

exports[`uses dependencies to detect modules 1`] = `
"[33msize-limit [OPTION]… [FILE]…[39m
Check the real performance cost of your front-end project to users

[1mCore options:[22m
  [33m--limit LIMIT[39m  Set size or running time limit for files
  [33m--json[39m         Show results in JSON format
  [33m--help[39m         Display this help
  [33m--version[39m      Display version

[1mWebpack options:[22m
  [33m--why[39m              Show package content
  [33m--save-bundle DIR[39m  Put build files to check them by hand

[1mExamples:[22m
  [33msize-limit[39m
    Read configuration from [1mpackage.json[22m or [1m.size-limit.json[22m and check limit
[33m  size-limit index.js[39m
    Show the size of specific files with all file dependencies
  [33msize-limit --why[39m
    Show reasons why project have this size
"
`;
